<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/team_rocket_logo"
        android:title="@string/nav_rockets" />

    <item
        android:id="@+id/questsFragment"
        android:icon="@drawable/binoculars_2"
        android:title="@string/nav_quests" />


    <item
        android:id="@+id/filterFragment"
        android:icon="@drawable/tune_24px"
        android:title="@string/nav_filter" />

    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/title_favorites"
        android:icon="@drawable/ic_favorite" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />


</menu>